@@ -11,7 +11,6 @@
 *******************************************************************************/
 package com.redhat.qute.project.multiple;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -32,9 +31,13 @@ public class QuteProjectA extends MockQuteProject {
 	public final static String PROJECT_URI = "project-a";
 
 	public QuteProjectA(QuteProjectRegistry projectRegistry) {
-		super(new ProjectInfo(PROJECT_URI, Collections.emptyList(),
-				Arrays.asList(new TemplateRootPath(getProjectPath(PROJECT_URI) + "/src/main/resources/templates")),
-				Collections.emptySet()), projectRegistry);
+		super(new ProjectInfo(PROJECT_URI, //
+				null, //
+				Collections.emptyList(), //
+				List.of(new TemplateRootPath(getProjectPath(PROJECT_URI) + "/src/main/resources/templates")),
+				Collections.emptySet(), //
+				Collections.emptySet()), //
+				projectRegistry);
 	}
 
 	@Override
